fix: search/select bar upon opening chat on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -277,6 +277,7 @@ button {
   align-items: center;
   padding: 0 8px;
   gap: 30px;
+  flex: 0 0 auto;
 }
 
 .searchbar {
